# electric

./: CMakeLists.txt  Manifest.toml  Project.toml  README.md  build_data.jl  fetch_databases.sh  run_prediction.jl  run_prediction_data_test.jl  run_prediction_test.jl
docker/: Dockerfile  jackhmmer_seq_limit.patch
scripts/: copy_to_ssd.sh  gcp_mount_ssd.sh
src/: StructurePrediction.jl
src/BioStructurePrediction/: __init__.jl  version.jl
src/BioStructurePrediction/common/: base_config.jl  folding_input.jl  resources.jl  safe_pickle.jl
src/BioStructurePrediction/constants/: atom_types.jl  chemical_component_sets.jl  chemical_components.jl  mmcif_names.jl  periodic_table.jl  (+2 more)
src/common/: base_config.jl  folding_input.jl  resources.jl  safe_pickle.jl
src/constants/: atom_types.jl  chemical_component_sets.jl  chemical_components.jl  mmcif_names.jl  periodic_table.jl  residue_names.jl  side_chains.jl
src/data/: featurisation.jl  msa.jl  msa_config.jl  msa_features.jl  msa_identifiers.jl  parsers.jl  pipeline.jl  structure_stores.jl  template_realign.jl  templates.jl
src/geometry/: rigid_matrix_vector.jl  rotation_matrix.jl  struct_of_array.jl  utils.jl  vector.jl
src/model/: confidence_types.jl  data3.jl  data_constants.jl  feat_batch.jl  features.jl  merging_features.jl  mmcif_metadata.jl  model_config.jl  msa_pairing.jl  params.jl  protein_data_processing.jl
src/parsers/: cif_dict.jl  fasta_iterator.jl  msa_conversion.jl
src/structure/: bioassemblies.jl  bonds.jl  chemical_components.jl  mmcif.jl  parsing.jl  structure.jl  structure_tables.jl  table.jl
(+54 files in other folders)
